# whiterun

.github/workflows/: backend-release.yml
backend/: .dockerignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run.sh
backend/alembic/versions/: d9214b366f7e_add_payment_model.py
backend/whiterun/: config.py  constants.py  database.py  deps.py  main.py  utils.py
backend/whiterun/crud/: payments.py
backend/whiterun/endpoints/: payments.py  webhooks.py
backend/whiterun/middleware/: webhooks.py
backend/whiterun/models/: payment.py
backend/whiterun/schemas/: payment.py
backend/whiterun/shared/: initializers.py  models.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  constants.ts  env.d.ts  main.ts  utils.ts
frontend/src/api/: index.ts
frontend/src/api/modules/: common.ts  payments.ts
frontend/src/assets/styles/: base.css
frontend/src/components/: PaymentCard.vue  QrCode.vue  ReloadButton.vue
frontend/src/composables/: fintocWidget.ts
frontend/src/interfaces/entities/: payments.ts
frontend/src/router/: index.ts
frontend/src/stores/: payments.ts
frontend/src/views/: AdminView.vue  PayView.vue
